--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@
 }
 
 .cabecalho{
-    background-color: blueviolet;
+    background-color:blueviolet;
     color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 24px 0;
-
 }
+
 .cabecalho-imagem{
     width: 20%;
 }
@@ -19,6 +19,53 @@
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
-
+    font-size: 24px;
 }
 
+.escola-imagem{
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(blueviolet, rgb(207, 163, 248));
+    color: white;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.escola-div-conteudo{
+ width: 35%;
+}
+.escola-titulo{
+padding: 24px 0;
+}
+
+.estudante-imagem{
+    width: 120px;
+}
+
+.estudante-div{
+    text-align: center;
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+
+.estudante-todos{
+   display: grid;
+   grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+.rodape{
+   background-color: rgb(174, 72, 214);
+   text-align: center;
+}
+
+.rodape-imagem{
+   height: 60px;
+   padding: 12px 0;
+}
