--- a/style.css
+++ b/style.css
@@ -1,71 +1,17 @@
-*{
-    margin: 0;
-    padding: 0;
+@import url("styles/header.css");
+
+:root {
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
+    --laranja: #eb9b00;
+    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+    --fonte-principal:"poppins";
 }
 
-.cabecalho{
-    background-color:blueviolet;
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 24px 0;
+body {
+    background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
-.cabecalho-imagem{
-    width: 20%;
-}
-
-.cabecalho-lista-item{
-    display: inline-block;
-    margin: 0 16px;
-    font-size: 24px;
-}
-
-.escola-imagem{
-    width: 25%;
-}
-
-.escola{
-    background-image: linear-gradient(blueviolet, rgb(207, 163, 248));
-    color: white;
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    padding: 24px 0;
-}
-
-.escola-div-conteudo{
- width: 35%;
-}
-.escola-titulo{
-padding: 24px 0;
-}
-
-.estudante-imagem{
-    width: 120px;
-}
-
-.estudante-div{
-    text-align: center;
-}
-
-.estudante-titulo{
-    text-align: center;
-    padding: 50px 0;
-}
-
-.estudante-todos{
-   display: grid;
-   grid-template-columns: 20% 20% 20% 20% 20%;
-}
-
-.rodape{
-   background-color: rgb(174, 72, 214);
-   text-align: center;
-}
-
-.rodape-imagem{
-   height: 60px;
-   padding: 12px 0;
-}
